<!--
  ~ Copyright 2017, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <!-- keys -->

    <!-- DunSceal -->

    <string name="app_name">DunSceal2</string>
    <string name="loading_investigations">Loading investigations...</string>
    <string name="loading_duns">Loading duns...</string>
    <string name="search_duns_hint">Search Duns...</string>
    <string name="cd_duns_list">Duns list</string>
    <string name="cd_investigations_list">Investigations list</string>
    <string name="cd_dun_name">Name of the dun</string>
    <string name="cd_search_duns">Search duns</string>
    <string name="cd_dun_image_icon">Image of the dun</string>
    <string name="cd_dun_votes">Votes for the dun</string>

    <!-- Dun -->

    <string name="hint_name">Dun Title</string>
    <string name="hint_dunDescription">Description </string>

    <!-- feature menu -->
    <string name="button_addDun">Add Dun</string>
    <string name="button_navigateTo">Navigate to</string>
    <!-- END feature menu -->

    <string name="menu_cancelDun">Cancel</string>
    <string name="enter_dun_title"> Please enter a Dun Title </string>
    <string name="save_dun"> Save Dun </string>
    <string name="button_addImage"> Image </string>
    <string name="select_dun_image">Select dun image</string>
    <string name="change_dun_image">Change dun image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_deleteDun">Delete</string>
    <string name="title_activity_dun_maps">Map of All Duns </string>
    <string name="dun_image_placeholder">Dun Image</string>
    <string name="dun_title_placeholder">Dun Title</string>
    <string name="dun_description_placeholder">Dun Description</string>
    <string name="menu_saveDun">Save</string>
    <string name="title_activity_dun_list">Duns</string>
    <string name="title_activity_dun">Dun</string>
    <string name="title_activity_edit_location">Dun</string>
    <string name="title_activity_login"> Signup/Login to Dun</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>

    <string name="play_btn_splash">skip splash</string>
    <string name="play_btn_home">go home</string>
    <string name="play_btn_signup">Sign In</string>
    <string name="play_btn_login">Login</string>


    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out!</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="select_profile_image">Select Profile Image</string>
    <!--END Firebase Resources-->

    <string name="messageLoading">Please wait while we Connect to the Server . . .</string>

    <!-- NAVIGATION MENU -->

    <!-- Navigation Drawer -->
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DunSceal2</string>
    <string name="nav_header_subtitle">john@doe.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_menu_main">Home</string>
    <string name="nav_menu_report">Report</string>
    <string name="nav_menu_report_all">All Duns</string>
    <string name="nav_menu_favourites">Favourites</string>
    <string name="nav_menu_about">About Us</string>
    <string name="nav_menu_share">Share</string>
    <string name="nav_menu_send">Send</string>
    <!-- END Navigation Drawer -->

    <!-- NAV MENUS -->

    <string name="home_menu_add">Add Dun</string>
    <string name="home_menu_list">List Duns</string>
    <string name="home_menu_map">Map</string>

    <!-- nav_drawer_home -->
    <string name="home_title">Search </string>
    <string name="home_total_visited_text">Number of Duns visited</string>
    <string name="home_total_visited_amount">0</string>

    <!-- duns -->
    <string name="action_report">Report Duns</string>
    <string name="action_report_all">Report All Duns</string>
    <string name="yes">yes</string>
    <string name="no">yes</string>
    <string name="action_settings">Settings</string>
    <string name="action_location_edit">Edit Location</string>
    <string name="about_us_title">About DunSceal2</string>

    <!-- merging -->
    <string name="recordTitle">Welcome Homer</string>
    <string name="recordSubtitle">Please Give Generously</string>
    <string name="recordButton">Record</string>
    <string name="visited">no</string>
    <string name="direct">Direct</string>
    <string name="vote">Amount</string>
    <string name="reportTitle">Duns Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_vote">Enter Amount</string>
    <string name="action_edit">Edit Dun</string>
    <string name="action_update">Update</string>
    <string name="message_edit">Please Update your Details Below</string>
    <string name="message">Message :</string>
    <string name="votes">Upvotes :</string>
    <string name="test">test</string>
    <string name="payment_type">Payment Type :</string>


    <!-- fragment containers -->
    <string name="fragment_tag">&lt;fragment&gt;</string>
    <string name="fragment_container">Fragment Container</string>
    <string name="title_activity_fragment_tag">&lt;fragment&gt;</string>
    <string name="title_activity_container">FragmentContainer</string>
    <string name="next">Next</string>
    <string name="communicate">Communicate</string>
    <string name="access_control">Access Control</string>




    <!-- Dun -->
    <string name="action_home">Home</string>
    <string name="action_dun">Dun</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">Dun</string>
    <string name="menu_routeDun">Route</string>
    <string name="textview">TextView</string>

    <!-- END Dun -->

    <!-- Date & Report Handling -->
    <string name="action_user_list">Settings</string>
    <string name="action_dun_list">Report</string>
    <string name="completeButton">Complete</string>
    <string name="date">Date</string>
    <string name="defaultComplete">0</string>
    <string name="enter_date">Enter Date</string>

    <string name="isVisited">Visited</string>
    <string name="notVisited">Not visited</string>
    <string name="date_picker">Date Picker</string>
    <string name="default_date">"--/--/----"</string>
    <string name="visited_on_date">Visited on date</string>

    <!-- test -->
    <string name="AboutUsText">Exploration of HillForts (Duns) by archaeological students. Registered users are assigned a list of sites to visit. Users can visit sites and updated existing records with new details and photos, and rate sites, and add new sites.</string>

    <!-- DunSceal -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dun_over">Dun Over</string>
    <string name="try_again">Try Again?</string>
    <string name="question_1">How many kilometers are in a marathon?</string>
    <string name="answer_1">22</string>
    <string name="answer_2">75</string>
    <string name="answer_3">42</string>
    <string name="answer_4">10</string>
    <string name="start">Start</string>
    <string name="versus">VS</string>
    <string name="select_a_favourite">Select an favourite Dun</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">sign up</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="next_match">Next Match</string>
    <string name="titleHeading1">DunSceal2</string>
    <string name="play">Go to Duns</string>
    <string name="profile_name_1">Ali Connors</string>
    <string name="profile_image">Profile image</string>
    <string name="user_points">10,000 pts</string>
    <string name="user_rank">#1</string>
    <string name="rank">Rank</string>
    <string name="rank_1">#1</string>
    <string name="wins">Visits</string>
    <string name="wins_vote">42</string>
    <string name="losses">Losses</string>
    <string name="losses_vote">03</string>
    <string name="congratulations">Congratulations!</string>

    <string name="title_activity_fragment_default_tag">Welcome</string>
    <string name="mock_database_name">mock_database.db</string>
  <string name="splash_picture_description">Logo</string>

</resources>
