<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme.NoActionBar">

  <data>
    <variable
        name="isLoading"
        type="boolean" />
  </data>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/cardview_light_background"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_horizontal_margin"
        android:layout_marginEnd="@dimen/item_horizontal_margin"
        android:orientation="horizontal">

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/duns_search_box"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:hint="@string/search_duns_hint" />

      <ImageButton
          android:id="@+id/duns_search_btn"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:contentDescription="@string/cd_search_duns"
          app:srcCompat="@drawable/ic_search_black_24dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/loading_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/loading_duns"
        android:textAlignment="center"
        app:visibleGone="@{isLoading}" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="403dp"
        android:layout_height="518dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/myRecyclerView"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:contentDescription="@string/cd_duns_list"
          app:layoutManager="LinearLayoutManager"
          app:visibleGone="@{!isLoading}" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
  </LinearLayout>
</layout>